feat: replace pairing with optional web password
